apps/limesurvey/manifests/external-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: limesurvey
spec:
  type: ExternalName
  externalName: database.esp.edu.kg
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
