apps/limesurvey/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: limesurvey
  namespace: limesurvey
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: limesurvey
